modules/tree-sitter/test/corpus/front-matter.txt
==================
Document front matter
==================

---
title: Example
tags: one two

other: line
---
Body text

---

(document
  (document_element
    (prompt_content
      (markdown_inline
        (newline_token))))
  (document_element
    (prompt_content
      (markdown_inline
        (markdown_text))))
  (document_element
    (prompt_content
      (markdown_inline
        (newline_token))))
  (document_element
    (prompt_content
      (markdown_inline
        (markdown_text))))
  (document_element
    (prompt_content
      (markdown_inline
        (newline_token))))
  (document_element
    (prompt_content
      (markdown_inline
        (markdown_text))))
  (document_element
    (prompt_content
      (markdown_inline
        (newline_token))))
  (document_element
    (prompt_content
      (markdown_inline
        (newline_token))))
  (document_element
    (prompt_content
      (markdown_inline
        (markdown_text))))
  (document_element
    (prompt_content
      (markdown_inline
        (newline_token))))
  (document_element
    (prompt_content
      (markdown_inline
        (markdown_text))))
  (document_element
    (prompt_content
      (markdown_inline
        (newline_token))))
  (document_element
    (prompt_content
      (markdown_inline
        (markdown_text))))
  (document_element
    (prompt_content
      (markdown_inline
        (newline_token)))))

==================
Front matter blank line
==================

---
key value

next: entry
---

---

(document
  (document_element
    (prompt_content
      (markdown_inline
        (newline_token))))
  (document_element
    (prompt_content
      (markdown_inline
        (markdown_text))))
  (document_element
    (prompt_content
      (markdown_inline
        (newline_token))))
  (document_element
    (prompt_content
      (markdown_inline
        (markdown_text))))
  (document_element
    (prompt_content
      (markdown_inline
        (newline_token))))
  (document_element
    (prompt_content
      (markdown_inline
        (newline_token))))
  (document_element
    (prompt_content
      (markdown_inline
        (markdown_text))))
  (document_element
    (prompt_content
      (markdown_inline
        (newline_token))))
  (document_element
    (prompt_content
      (markdown_inline
        (markdown_text))))
  (document_element
    (prompt_content
      (markdown_inline
        (newline_token)))))
