modules/tree-sitter/test/corpus/template.txt
==================
Template with identifier name
==================

[[@template sidebar]]
Sidebar body
[[@end]]

---

(document
  (document_element
    (prompt_content
      (markdown_inline
        (newline_token))))
  (document_element
    (sub_prompt
      (template_start
        (prompt_name
          (identifier)))
      (prompt_content
        (markdown_inline
          (newline_token)))
      (prompt_content
        (markdown_inline
          (markdown_text)))
      (prompt_content
        (markdown_inline
          (newline_token)))
      (end_directive)))
  (document_element
    (prompt_content
      (markdown_inline
        (newline_token)))))

==================
Template with string name
==================

[[@template "main"]]
Main body
[[@end]]

---

(document
  (document_element
    (prompt_content
      (markdown_inline
        (newline_token))))
  (document_element
    (sub_prompt
      (template_start
        (prompt_name
          (string)))
      (prompt_content
        (markdown_inline
          (newline_token)))
      (prompt_content
        (markdown_inline
          (markdown_text)))
      (prompt_content
        (markdown_inline
          (newline_token)))
      (end_directive)))
  (document_element
    (prompt_content
      (markdown_inline
        (newline_token)))))

==================
Meta block with blank line
==================

[[@template "sidebar"]]
---
topic validation

label "validation"
---
[[@end]]

---

(document
  (document_element
    (prompt_content
      (markdown_inline
        (newline_token))))
  (document_element
    (sub_prompt
      (template_start
        (prompt_name
          (string)))
      (prompt_content
        (markdown_inline
          (newline_token)))
      (meta_block
        (front_matter_start)
        (meta_entry
          (identifier)
          (meta_value
            (identifier))
          (newline_token))
        (front_matter_blank)
        (meta_entry
          (identifier)
          (meta_value
            (string))
          (newline_token))
        (front_matter_end))
      (end_directive)))
  (document_element
    (prompt_content
      (markdown_inline
        (newline_token)))))

==================
Template with meta and content
==================

[[@template t1]]
Before meta
---
metaKey metaValue
---
After meta
[[@end]]

---

(document
  (document_element
    (prompt_content
      (markdown_inline
        (newline_token))))
  (document_element
    (sub_prompt
      (template_start
        (prompt_name
          (identifier)))
      (prompt_content
        (markdown_inline
          (newline_token)))
      (prompt_content
        (markdown_inline
          (markdown_text)))
      (prompt_content
        (markdown_inline
          (newline_token)))
      (meta_block
        (front_matter_start)
        (meta_entry
          (identifier)
          (meta_value
            (identifier))
          (newline_token))
        (front_matter_end))
      (prompt_content
        (markdown_inline
          (markdown_text)))
      (prompt_content
        (markdown_inline
          (newline_token)))
      (end_directive)))
  (document_element
    (prompt_content
      (markdown_inline
        (newline_token)))))
